# sam3cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bindings/python/: pyproject.toml
bindings/python/examples/: overlay.py
bindings/python/sam3cpp/: __init__.py
bindings/python/src/: module.cpp
bindings/rust/: Cargo.toml  build.rs
bindings/rust/examples/: predict.rs
bindings/rust/src/: lib.rs
include/sam3/: c_api.h  decoder.h  dummy_prompt.h  encoder_fusion.h  geometry_encoder.h  gguf_model.h  grounding_head.h  npy.h  pipeline.h  segmentation_head.h  text_encoder.h  tokenizer.h  vision_neck.h  vision_trunk.h
src/: c_api.cpp  decoder.cpp  dummy_prompt.cpp  encoder_fusion.cpp  geometry_encoder.cpp  gguf_model.cpp  grounding_head.cpp  pipeline.cpp  segmentation_head.cpp  text_encoder.cpp  tokenizer.cpp  vision_neck.cpp  vision_trunk.cpp
tools/: compare_call_image_reference.py  compare_decoder_reference.py  compare_dummy_prompt_reference.py  compare_encoder_reference.py  compare_grounding_head_reference.py  compare_neck_reference.py  compare_segmentation_reference.py  compare_text_reference.py  compare_vision_trunk_reference.py  convert_mlx_sam3_to_gguf.py  export_call_image_reference.py  export_decoder_reference.py  export_dummy_prompt_reference.py  export_encoder_reference.py  export_neck_reference.py  export_segmentation_reference.py  export_text_reference.py  export_vision_trunk_reference.py  fidelity.py  hybrid_grounding.py  reference_mlx.py  sam3_call_image.cpp  sam3_decoder.cpp  sam3_dummy_prompt.cpp  sam3_encoder_fusion.cpp  sam3_grounding_head.cpp  sam3_inspect.cpp  sam3_profile.cpp  sam3_segmentation_head.cpp  sam3_text_encode.cpp  sam3_vision_neck.cpp  sam3_vision_trunk.cpp
